<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:padding="10dp" android:gravity="center_vertical"
    android:background="#CC14161B">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:maxLines="1" android:ellipsize="end" android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1" android:text="@string/pv_session"
            android:textColor="#FFFFFFFF" android:textSize="15sp" />
        <TextView android:maxLines="1" android:ellipsize="end" android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1" android:text="@string/pv_weekly"
            android:textColor="#FFFFFFFF" android:textSize="15sp" />
        <TextView android:maxLines="1" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/pv_age" android:textColor="#FF9AA3B2" android:textSize="11sp" />
    </LinearLayout>
</LinearLayout>
